--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-type-animation": "^3.2.0",
+    "styled-jsx": "^5.1.7",
     "three": "^0.180.0"
   },
   "devDependencies": {
